--- a/views/busqueda.ejs
+++ b/views/busqueda.ejs
@@ -5,8 +5,8 @@
         <div class="grid columnas-md-3 ">   
         <% meetis.forEach(meeti => { %>
             <div class="card">
-                <% if(meeti.grupo.imagen){ %>    
-                    <img src="/uploads/groups/<%= meeti.grupo.imagen %>">
+                <% if(meeti.group.imagen){ %>    
+                    <img src="/uploads/groups/<%= meeti.group.imagen %>">
                 <% }else{ %>
                     <img src="/img/meeti.jpg">
                 <% } %>
